10. Re-add fix for icons on GEdit tabs - but only for GeditNotebook widgets.
11. Draw entry field backgrounds.
12. Dont use KDE4's disabled background colour.
13. Experimental support for menu-stripe. No GUI setting, edit ~/.config/qtcurvestylerc
    and add:
        gtkMenuStripe=true
    (Needs menu stipe also enabled in KDE GUI)

0.64.2
------
1. When using shaded combo buttons, use button colours for border.
2. Disable button order userChrome.css mods for Thunderbird>=3
3. Added a verbose warning about the usage of QTC_MODIFY_MOZILLA
4. Fix spin widget entry field when widget is on a notebook - bug was caused
   by fix for GEdit tabs.
5. Disable coloured slider hack for Firefox apps. This hack attempts to solve the
   miscolured top/bottom line of sliders when they are at the top/bottom.

0.64.1
------
1. When using shaded combo buttons, use the combo splitter setting to
   determine if there should be a border between the shaded and unshaded parts.
2. Make menubar items selectable right up to the top edge of the menubar.
3. Fix clipping of close icon on GEdit tabs.

0.64.0
------
 1. Add option to not draw border around popupmenus.
 2. Add option to unify spinbuttons.
 3. Add option to set sub-menu delay (default 100ms)
 4. Use equal top/bottom padding on popupmenu separators.
 5. Add option to colour arrow part of combobox.
 6. Draw resize grip as a darkend triangle.
 7. Add a 'thick colored border' mouse over type.
 8. Allow to darken sliders.
 9. Add new default button indicator - darken.
10. Harmonize KDE4 & Gtk2 popupmenu overlaps.
11. Slightly changed min width/height of when buttons can be max
    rounded - fixes some issues with firefox.
12. Fix scrollbar background when using thinner grooves.
13. Under KDE4 (KDE_SESSION_VERSION>=4), default hover/focus colours to the
    KDE4 defaults.
14. Fix firefox crashing when scrollbar slider move to top. This only occurs
    when not using flat scrollbar buttons, and a coloured scrollbar slider.