@@ -63,7 +63,8 @@ typedef struct
 {
     GtkStyle parent_instance;
     GdkGC   *button_text_gc[2],
-            *menutext_gc[2];
+            *menutext_gc[2],
+            *lv_lines_gc;
 } QtCurveStyle;
 
 struct _QtCurveStyleClass
