@@ -24,6 +24,7 @@
     and add:
         gtkMenuStripe=true
     (Needs menu stipe also enabled in KDE GUI)
+14. Enable drawing of list (tree) view lines.
 
 0.64.2
 ------
